# genaiagent

./: .env.global  ENVIRONMENT_GUIDE.md  README.md  fix-python-deps.sh  manage-env.sh  readme  setup-system.sh
Agents/API-requirements/: Api_requirement_template.yml
Agents/API-requirements/metadata/: generatedapi_20250916_183520_metadata.json  generatedapi_20250916_183705_metadata.json
Agents/API-requirements/specs/: customer_share_holding_spec.yml  customer_update_spec.yml  policy_management_spec.yml
Agents/CodeCompilationAgent/: .env  LIVE_TEST_RESULTS.md  README.md  TESTING_SUMMARY.md  compile_cli.py  demo_compilation.py  fresh_test_report.txt  live_compilation_report.txt  policy_compilation_report.txt  requirements.txt  test_compilation_report.txt  test_report_policy_management.md
Agents/CodeCompilationAgent/sample-maven-project/: pom.xml
Agents/CodeCompilationAgent/src/: compilation_agent.py
Agents/CodeGenerationAgent/: .env.development  .gitignore  CLEANUP_SUMMARY.md  ENHANCEMENT_COMPLETE.md  README.md  debug_agent_goals.py  demo_enhanced_system.py  final_validation.py  main_enhanced_agentic.py  test_enhanced_agent.py  test_imports.py  validate_implementation.py
Agents/CodeGenerationAgent/ApplicationTest/: README.md  demo_enhanced_code_generation.py  run_tests.py  test_agent_selection.py  test_code_generation_phase4.py  test_context_enrichment.py  test_error_handling_revolution.py  test_imports_debug.py  test_phase3_components.py  test_phase3_direct.py  test_phase3_integration.py  test_phase4_assessment.py  test_phase4_assessment_lite.py  test_phase_implementation.py
Agents/CodeGenerationAgent/Documents/: LICENSE  (+2 more)
Agents/CodeGenerationAgent/ProjectSetup/: Makefile  README.md  pyproject.toml  setup.sh
Agents/CodeReviewAgent/: .env  AGENTIC_TRANSFORMATION_COMPLETE.md  POLICY_GENERATION_REVIEW_SUMMARY.md  README.md  __init__.py  agentic_transformation_demo.json  config_example.py  demo_agentic.py  demo_simple.py  main.py  main_agentic.py  policy_generation_agentic_review.json  requirements.txt  review_policy_generation.py  test_agentic.py
Agents/FixCompilationIssuesAgent/: -  README.md  main_agentic.py  requirements.txt
Agents/GitHubSearchAgent/: .env  .env.example  README.md  requirements.txt
Agents/InstructionFiles/: java_springboot.yml
Agents/WebSerarchAgent/: .env  README.md  requirements.txt
Agents/WorkflowOrchestrationAgent/: .env  =0.19.0  README.md  orchestration_agent.py  requirements.txt  setup.sh
Agents/WriteAPISpecAgent/: .env  README.md  demo_agentic.py  demo_fixed_dependencies.py  mcp_api_generator.py  requirements.txt
GeneratedCode/customershareholdingspec_20250916T174426/: pom.xml
GeneratedCode/customerupdatespec_20250916T174434/: pom.xml
GeneratedCode/policymanagementspec_20250916T174348/: pom.xml
mcp-server/: .env  .env.example  CLEANUP_COMPLETE.md  MODULAR_ARCHITECTURE.md  MODULAR_README.md  REFACTORING_COMPLETE.md  package-lock.json  package.json  test-modular.mjs  tsconfig.json
mcp-server/src/: agents.ts  config.ts  express-types.d.ts  server-legacy.ts  server.ts  workflow-orchestrator.ts
(+199 files in other folders)
